tests/unit/default/syntax-error/071-create-table-dot.x.t
---- IN ----
+%table.|
---- OUT ----
---- ERR ----
syntax: expected <add-column-spec> after `+%table.` near `|` at position 8 - at line 1
---- EXIT ----
1
